--- a/config.json
+++ b/config.json
@@ -1830,7 +1830,8 @@
           }
         ],
         "style": {
-          
+          "padding_top": "50px",
+          "padding_bottom": "50px"
         }
       },
       "contact": {
