--- a/config.json
+++ b/config.json
@@ -16,7 +16,7 @@
       "format": "color",
       "ui:css_selector": "${block_id_css_id} .section-heading, ${block_id_css_id} h1, ${block_id_css_id} h2, ${block_id_css_id} 3, ${block_id_css_id} h4, ${block_id_css_id} h5, ${block_id_css_id} h6",
       "ui:css_property": "color",
-      "default": "#/settings/theme/colors/title_text_color"
+      "efault": "#/settings/theme/colors/title_text_color"
     },
     "subtitle_text_color": {
       "type": "string",
@@ -24,7 +24,7 @@
       "format": "color",
       "ui:css_selector": "body ${block_id_css_id} h3.section-subheading",
       "ui:css_property": "color",
-      "default": "#/settings/theme/colors/subtitle_text_color"
+      "efault": "#/settings/theme/colors/subtitle_text_color"
     },
     "text_color": {
       "type": "string",
