--- a/config.json
+++ b/config.json
@@ -736,7 +736,8 @@
                     "$ref": "#/definitions/block_padding_top"
                   },
                   "padding_bottom": {
-                    "$ref": "#/definitions/block_padding_bottom"
+                    "$ref": "#/definitions/block_padding_bottom",
+                    "default": 150
                   }
                 }
               },
