--- a/config.json
+++ b/config.json
@@ -736,8 +736,7 @@
                     "$ref": "#/definitions/block_padding_top"
                   },
                   "padding_bottom": {
-                    "$ref": "#/definitions/block_padding_bottom",
-                    "default": 150
+                    "$ref": "#/definitions/block_padding_bottom"
                   }
                 }
               },
