--- a/config.json
+++ b/config.json
@@ -389,12 +389,6 @@
                     "title": "Overlay Opacity",
                     "minimum": 0,
                     "maximum": 100
-                  },
-                  "body_padding_top": {
-                    "type": "integer",
-                    "title": "Body padding top",
-                    "minimum": 0,
-                    "maximum": 200
                   }
                 }
               },
@@ -1515,8 +1509,7 @@
             "border_bottom_color": "transparent",
             "show_overlay": false,
             "overlay_bg_color": "#000000",
-            "overlay_opacity": 20,
-            "body_padding_top": 0
+            "overlay_opacity": 20
           },
           "logo": {
             "text_color": "#fed136",
