--- a/config.json
+++ b/config.json
@@ -1600,7 +1600,7 @@
             "title": "Project name",
             "summary": "Lorem ipsum dolor sit amet consectetur.",
             "body": "<p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p><p><strong>Want these icons in this portfolio item sample?</strong>You can download 60 of them for free, courtesy of <a href=\"https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc\">RoundIcons.com</a>, or you can purchase the 1500 icon set <a href=\"https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc\">here</a>.</p>",
-            "image": "https://blackrockdigital.github.io/startbootstrap-agency/img/portfolio/roundicons.png",
+            "image": "https://raw.githubusercontent.com/klar-templates/agency/master/img/portfolio/roundicons.png",
             "category": "Graphic Design",
             "client": "Round Icons",
             "date": "2014-07-14"
@@ -1609,7 +1609,7 @@
             "title": "Project heading",
             "summary": "Lorem ipsum dolor sit amet consectetur.",
             "body": "<p><a href=\"http://designmodo.com/startup/?u=787\">Startup Framework</a> is a website builder for professionals. Startup Framework contains components and complex blocks (PSD+HTML Bootstrap themes and templates) which can easily be integrated into almost any design. All of these components are made in the same style, and can easily be integrated into projects, allowing you to create hundreds of solutions for your future projects.</p><p>You can preview Startup Framework <a href=\"http://designmodo.com/startup/?u=787\">here</a>.</p>",
-            "image": "https://blackrockdigital.github.io/startbootstrap-agency/img/portfolio/startup-framework.png",
+            "image": "https://raw.githubusercontent.com/klar-templates/agency/master/img/portfolio/startup-framework.png",
             "category": "Website Design",
             "client": "Startup Framework",
             "date": "2014-07-14"
@@ -1618,7 +1618,7 @@
             "title": "Project name",
             "summary": "Lorem ipsum dolor sit amet consectetur.",
             "body": "<p>Treehouse is a free PSD web template built by <a href=\"https://www.behance.net/MathavanJaya\">Mathavan Jaya</a>. This is bright and spacious design perfect for people or startup companies looking to showcase their apps or other projects.</p><p>You can download the PSD template in this portfolio sample item at <a href=\"http://freebiesxpress.com/gallery/treehouse-free-psd-web-template/\">FreebiesXpress.com</a>.</p>",
-            "image": "https://blackrockdigital.github.io/startbootstrap-agency/img/portfolio/treehouse.png",
+            "image": "https://raw.githubusercontent.com/klar-templates/agency/master/img/portfolio/treehouse.png",
             "category": "Website Design",
             "client": "Treehouse",
             "date": "2014-07-14"
@@ -1627,7 +1627,7 @@
             "title": "Project name",
             "summary": "Lorem ipsum dolor sit amet consectetur.",
             "body": "<p>Start Bootstrap's Agency theme is based on Golden, a free PSD website template built by <a href=\"https://www.behance.net/MathavanJaya\">Mathavan Jaya</a>. Golden is a modern and clean one page web template that was made exclusively for Best PSD Freebies. This template has a great portfolio, timeline, and meet your team sections that can be easily modified to fit your needs.</p><p>You can download the PSD template in this portfolio sample item at <a href=\"http://freebiesxpress.com/gallery/golden-free-one-page-web-template/\">FreebiesXpress.com</a>.</p>",
-            "image": "https://blackrockdigital.github.io/startbootstrap-agency/img/portfolio/golden.png",
+            "image": "https://raw.githubusercontent.com/klar-templates/agency/master/img/portfolio/golden.png",
             "category": "Website Design",
             "client": "Golden",
             "date": "2014-07-14"
@@ -1636,7 +1636,7 @@
             "title": "Project name",
             "summary": "Lorem ipsum dolor sit amet consectetur.",
             "body": "<p>Escape is a free PSD web template built by <a href=\"https://www.behance.net/MathavanJaya\">Mathavan Jaya</a>. Escape is a one page web template that was designed with agencies in mind. This template is ideal for those looking for a simple one page solution to describe your business and offer your services.</p><p>You can download the PSD template in this portfolio sample item at <a href=\"http://freebiesxpress.com/gallery/escape-one-page-psd-web-template/\">FreebiesXpress.com</a>.</p>",
-            "image": "https://blackrockdigital.github.io/startbootstrap-agency/img/portfolio/escape.png",
+            "image": "https://raw.githubusercontent.com/klar-templates/agency/master/img/portfolio/escape.png",
             "category": "Website Design",
             "client": "Escape",
             "date": "2014-07-14"
@@ -1645,7 +1645,7 @@
             "title": "Project name",
             "summary": "Lorem ipsum dolor sit amet consectetur.",
             "body": "<p>Dreams is a free PSD web template built by <a href=\"https://www.behance.net/MathavanJaya\">Mathavan Jaya</a>. Dreams is a modern one page web template designed for almost any purpose. It’s a beautiful template that’s designed with the Bootstrap framework in mind.</p><p>You can download the PSD template in this portfolio sample item at <a href=\"http://freebiesxpress.com/gallery/dreams-free-one-page-web-template/\">FreebiesXpress.com</a>.</p>",
-            "image": "https://blackrockdigital.github.io/startbootstrap-agency/img/portfolio/dreams.png",
+            "image": "https://raw.githubusercontent.com/klar-templates/agency/master/img/portfolio/dreams.png",
             "category": "Website Design",
             "client": "Dreams",
             "date": "2014-07-14"
