--- a/config.json
+++ b/config.json
@@ -1668,25 +1668,25 @@
         "sub_heading": "Lorem ipsum dolor sit amet consectetur.",
         "items": [
           {
-            "image": "https://blackrockdigital.github.io/startbootstrap-agency/img/about/1.jpg",
+            "image": "../img/about/1.jpg",
             "title": "2009-2011",
             "subtitle": "Our Humble Beginnings",
             "text": "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!"
           },
           {
-            "image": "https://blackrockdigital.github.io/startbootstrap-agency/img/about/2.jpg",
+            "image": "../img/about/2.jpg",
             "title": "March 2011",
             "subtitle": "An Agency is Born",
             "text": "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!"
           },
           {
-            "image": "https://blackrockdigital.github.io/startbootstrap-agency/img/about/3.jpg",
+            "image": "../img/about/3.jpg",
             "title": "December 2012",
             "subtitle": "Transition to Full Service",
             "text": "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!"
           },
           {
-            "image": "https://blackrockdigital.github.io/startbootstrap-agency/img/about/4.jpg",
+            "image": "../img/about/4.jpg",
             "title": "July 2014",
             "subtitle": "Phase Two Expansion",
             "text": "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!"
