Add default blocks

--- a/config.json
+++ b/config.json
@@ -1876,5 +1876,16 @@
         "image": "https://svti.svt.se/wp-content/themes/svti/assets/img/kollage3.jpg"
       }
     }
-  }
+  },
+  "blocks_default": [
+    "navigation",
+    "header",
+    "services",
+    "portfolio",
+    "about",
+    "team",
+    "clients",
+    "contact",
+    "footer"
+  ]
 }
