--- a/config.json
+++ b/config.json
@@ -838,6 +838,7 @@
           "items": {
             "type": "array",
             "title": "Portfolio",
+            "limit": 10,
             "items": {
               "type": "object",
               "title": "Portfolio item",
