--- a/config.json
+++ b/config.json
@@ -291,7 +291,7 @@
     },
     {
       "title": "Blogg",
-      "id": "blogg"
+      "id": "blog-page"
     },
     {
       "title": "Kontaktsida",
